<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>libmodbus_macaroons</name>
  <version>0.1.0</version>
  <description>Build libmodbus_macaroons</description>
  <maintainer email="md403@cam.ac.uk">Michael Dodson</maintainer>
  <license>Apache License 2.0</license>
  <author>Michael Dodson</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>libmodbus</exec_depend>
  <exec_depend>libmacaroons</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
